# typogenesis

./: .gitignore  CLAUDE.md  Package.swift  README.md  project.yml
.github/: dependabot.yml
Typogenesis.xcodeproj/: project.pbxproj
TypogenesisTests/: AIGenerationE2ETests.swift  AIGenerationExtendedTests.swift  DesignSpaceExporterTests.swift  ExportViewModelTests.swift  FlowMatchingSchedulerTests.swift  FontCreationE2ETests.swift  FontIOTests.swift  FontProjectTests.swift  GenerationViewModelTests.swift  GlyphDiffusionIntegrationTests.swift  (+27 more)
scripts/: Makefile  __init__.py  pyproject.toml  requirements.txt  train_all.py
scripts/convert/: __init__.py  config.py  convert_glyph_diffusion.py  convert_kerning_net.py  convert_style_encoder.py  utils.py  verify_conversion.py
scripts/data/: __init__.py  augment_data.py  augmentations.py  download_fonts.py  extract_glyphs.py  generate_pairs.py  prepare_datasets.py
scripts/datasets/: __init__.py  glyph_dataset.py  kerning_dataset.py  style_dataset.py
scripts/evaluation/: __init__.py  compare.py  metrics.py  visualize.py
scripts/models/: __init__.py
scripts/models/glyph_diffusion/: __init__.py  config.py  model.py  noise_schedule.py  sample.py  train.py
scripts/models/kerning_net/: __init__.py  config.py  model.py  predict.py  train.py
scripts/models/style_encoder/: __init__.py  config.py  embed.py  losses.py  model.py  train.py
scripts/tests/: conftest.py  test_coreml_conversion.py  test_data_pipeline.py  test_evaluation.py  test_losses.py  test_models.py  test_noise_schedule.py  test_training.py
(+79 files in other folders)
